...
        name="(b.surahs)"
        contentStyle={{backgroundColor: theme.colors.background}}>
        <NativeTabs.Trigger.Icon
          src={tabIcons.surahs}
          renderingMode="template"
        />
        <NativeTabs.Trigger.Label>Mushaf</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger
        name="(b.search)"
        role="search"
        contentStyle={{backgroundColor: theme.colors.background}}>
        <NativeTabs.Trigger.Icon
          src={tabIcons.search}
          renderingMode="template"
        />
        <NativeTabs.Trigger.Label>Search</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger
        name="(c.collection)"
        contentStyle={{backgroundColor: theme.colors.background}}>
        <NativeTabs.Trigger.Icon
...
